--- a/.github/workflows/publish_leaks_report.yml
+++ b/.github/workflows/publish_leaks_report.yml
@@ -5,22 +5,24 @@ on:
 
 jobs:
   publish:
-    runs-on: macos-14
+    runs-on: macos-13
 
     env:
-      MAESTRO_DRIVER_STARTUP_TIMEOUT: 240000
+      MAESTRO_DRIVER_STARTUP_TIMEOUT: 600000
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Select Xcode
-        run: sudo xcode-select -switch /Applications/Xcode_15.0.1.app && /usr/bin/xcodebuild -version
+        run: sudo xcode-select -switch /Applications/Xcode_15.2.0.app && /usr/bin/xcodebuild -version
       
       - name: Install Maestro
         run: |
           curl -Ls --retry 3 --retry-all-errors "https://get.maestro.mobile.dev" | bash
           echo "${HOME}/.maestro/bin" >> $GITHUB_PATH
+          sudo DevToolsSecurity -enable
+
       
       - name: Print Maestro version
         run: maestro --version
@@ -56,26 +58,35 @@ jobs:
       - name: Run test
         run: maestro test ./.github/scripts/suggestion_flow.yaml
 
-      - name: Execute leaks command
-	run: leaks ${{ env.PID }}
+      - name: Run leaks command
+        run: sudo leaks ${{ env.PID }} >> ~/leaks.txt
 
-      - name: Upload maestro debug logs 
+      - name: Upload leaks output
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: leaks_output
+          path: ~/leaks.txt
+          retention-days: 1
+
+      - name: Upload maestro logs
         uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: maestro_logs
           path: ~/.maestro/tests/
-          retention-days: 3
+          retention-days: 1
           include-hidden-files: true
-      
+
       - name: Capture ps output
         if: failure()
         run: |
           ps aux > ~/ps_output.txt
 
-      - name: Upload ps output logs
+      - name: Upload ps output
         uses: actions/upload-artifact@v4
         if: failure()
         with: 
-          name: ps-output
+          name: ps_output
           path: ~/ps_output.txt
+          retention-days: 1
